--- a/Sep - 24/Visualizations.ipynb
+++ b/Sep - 24/Visualizations.ipynb
@@ -5,7 +5,7 @@
    "id": "88a62ab9-48e0-4642-8b7d-e64bd2487eea",
    "metadata": {},
    "source": [
-    "## Sales Data Visualization\n"
+    "## Task - 1 - Sales Data Visualization\n"
    ]
   },
   {
